# fastapi-hypermodel

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
advanced/: index.html
basics/: index.html
docs/: advanced.md  basics.md  comparison.md  extending.md  index.md  resources.md  use_cases.md
examples/: simple_app.py
examples/hal/: __init__.py  __main__.py  app.py  data.py
examples/siren/: __init__.py  __main__.py  app.py  data.py
examples/url_for/: __init__.py  __main__.py  app.py  data.py
extending/: index.html
fastapi_hypermodel/: __init__.py  hal.py  hypermodel.py  linkset.py  siren.py  url_for.py  url_type.py  utils.py
fastapi_hypermodel/base/: __init__.py  hypermodel.py  url_type.py  utils.py
fastapi_hypermodel/hal/: __init__.py  hal_hypermodel.py  hal_response.py
fastapi_hypermodel/siren/: __init__.py  siren_action.py  siren_base.py  siren_field.py  siren_hypermodel.py  siren_link.py  siren_response.py  siren_schema.py
fastapi_hypermodel/url_for/: __init__.py  url_for.py
js/: linked_tabs.js
resources/: index.html
search/: search_index.json
tests/: app.py  conftest.py  test_fastapi_hypermodel.py  test_fastapi_hypermodel_schemas.py  test_hal.py  test_hypermodel.py  test_linkset.py  test_siren.py  test_url_for.py  test_url_type.py  test_utility_functions.py
tests/integration/hal/: conftest.py  test_hal_items.py  test_hal_people.py
tests/integration/siren/: conftest.py  test_siren_items.py  test_siren_people.py
tests/integration/url_for/: conftest.py  test_url_for_items.py  test_url_for_people.py
