[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "A FastAPI + Pydantic extension for simplifying hypermedia-driven API development."
license = "MIT"
name = "fastapi-hypermodel"
readme = "README.md"
repository = "https://github.com/jtc42/fastapi-hypermodel"
version = "0.5.0"

[tool.poetry.dependencies]
fastapi = ">=0.65.2"
pydantic = "^1.8"
python = ">=3.7,<4.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
black = ">=22.3,<24.0"
httpx = ">=0.23.1,<0.25.0"
isort = "^5.7.0"
mkdocs-material = ">=8.3.9,<10.0.0"
mypy = ">=0.991,<1.3"
pylint = "^2.6.2"
pytest = "^7.0"
pytest-cov = ">=3,<5"
requests = "^2.25.1"
tox = "^4.4"
uvicorn = ">=0.17.6,<0.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pylint.'MESSAGES CONTROL']
# unsubscriptable-object is disabled until proper Python 3.9 support is fixed in PyLint
disable = "line-too-long, unsubscriptable-object, fixme, missing-module-docstring, missing-class-docstring, too-few-public-methods, too-many-arguments"
max-line-length = 88

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic" # PyLint struggles with Pydantic in GH Actions
